# Full_stack_todo_app

./: .env  pyproject.toml
daily_todo_app/: main.py  setting.py
